src/ui/card/card.module.scss
@use "../../styles/mixins" as *;
@use "../../styles/variables" as *;

.card{
    width: 20.4375rem;
    margin: 2.5rem auto 0;

    &:hover{
        cursor: pointer;

        & > .card__last{
            background-color: $peach;

            & > *{
                color: $white;
            }
        }
    }

    &:first-of-type{
        margin-top: 0;
    }

    @include tablet{
        width: 43.0625rem;
        display: flex;
    }

    @include desktop{
        width: 21.875rem;
        display: block;
        margin: 0;
    }

    &__first{
        height: 20rem;

        @include tablet{
            width: 21.1875rem;
            height: 19.375rem;
        }

        @include desktop{
            width: 100%;
            height: 20rem;
        }
    }

    &__cover{
        width: 100%;
        border-radius: 0.9375rem 0.9375rem 0 0;

        @include tablet{
            border-radius: 0.9375rem 0 0 0.9375rem;
        }

        @include desktop{
            border-radius: 0.9375rem 0.9375rem 0 0;
        }
    }

    &__last{
        padding: 2rem 0;
        background-color: #FDF3F0;
        border-radius: 0 0 0.9375rem 0.9375rem;
        text-align: center;

        @include tablet{
            flex-grow: 1;
            border-radius: 0 0.9375rem 0.9375rem 0;
            display: flex;
            flex-direction: column;
            justify-content: center;
        }

        @include desktop{
            border-radius: 0 0 0.9375rem 0.9375rem;
        }
    }

    &__title{
        @include heading-1;
        color: $peach;
    }

    &__description{
        @include body-2;
        min-width: 16.6875rem;
        max-width: 17.875rem;
        margin: 1rem auto 0;
    }
}

